# number_recognition

./: .gitignore  README.md  pyproject.toml
number_recognition/: main.py
number_recognition/models/: models.py
number_recognition/modules/number_recognition/: __init__.py  frozen_east_text_detection.pb  main.ipynb  main.py  text_detection.py
tests/: test_number_recognition.py
