[tool.poetry]
name = "number-recognition"
version = "0.1.0"
description = ""
authors = ["ChutkaDope <chutkanub@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.2.0"
cython = "^0.29.16"
matplotlib = "^3.2.1"
setuptools = "^46.1.3"
numpy = "^1.18.2"
Keras = "^2.3.1"
imgaug = "^0.4.0"
tensorflow = "^2.1.0"
imutils = "^0.5.3"
scikit-image = "^0.16.2"
jupyter = "^1.0.0"
asyncio = "^3.4.3"
GitPython = "^3.1.0"
pycocotools = "^2.0.0"
tqdm = "^4.45.0"
pillow = "^7.1.1"
pytesseract = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
